--- a/client/term4-group2-qna/src/components/elements/Search Bar/searchBar.css
+++ b/client/term4-group2-qna/src/components/elements/Search Bar/searchBar.css
@@ -1,1 +1,125 @@
-.searchBarWrap {}
+.searchBarWrap {
+    background: #26282C;
+    padding: 6px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 4px;
+    width: 340px;
+    border-radius: 12px;
+    position: relative;
+    border: 2px solid #18191B;
+}
+
+.searchBarLeftContainer {
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.searchBarInput {
+    outline: none;
+    background: none;
+    border: none;
+    color: #F9F3ED;
+    width: 260px;
+}
+
+.searchBarWrap-active {
+    border: 2px solid #FF8328;
+    z-index: 2;
+}
+
+.searchBarClose-active {
+    color: #848079;
+}
+
+.searchBarClose-deactive {
+    display: none;
+    cursor: default;
+}
+
+/* SEARCH OVERLAY */
+.searchBackgroundOps {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: #10101145;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.searchBackgroundOps-deactive {
+    display: none;
+}
+
+.searchBarBackground {
+    background: rgba(95, 95, 242, 0.55);
+    height: 20px;
+}
+
+.searchBarOverlay-active {
+    background: #26282C;
+    position: absolute;
+    z-index: 2;
+    top: 17.8px;
+    padding: 15px;
+    margin-left: -16px;
+    margin-top: -16px;
+    border-radius: 12px;
+}
+
+.searchBarOverlay-deactive {
+    display: none;
+}
+
+.searchBarResultsWrap {
+    margin-top: 16px;
+}
+
+.searchBarSearchWrap {
+    display: flex;
+    align-items: center;
+    background: #494b50;
+    padding: 8px 14px;
+    border-radius: 10px;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.searchBarSearchLeftContainer {
+    display: flex;
+    gap: 6px;
+}
+
+.result-header {
+    font-family: Kanit;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.results-container {
+    padding: 0;
+    margin-top: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 1px;
+}
+
+.result-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    list-style: none;
+    padding: 2px 15px;
+    font-family: Pontano Sans;
+    cursor: pointer;
+}
+
+.result-item:hover {
+    background: #494b50;
+    border-radius: 6px;
+}
