--- a/client/term4-group2-qna/src/frontend.css
+++ b/client/term4-group2-qna/src/frontend.css
@@ -1,41 +1,189 @@
 /* Log In & Sign Up */
 .mainbg {
     background-color: #232428;
-    width: 1570px;
-    height: 840px;
+    width: 1597px;
+    height: 774px;
     margin-left: -8px;
-    padding-top: 100px;
+    padding-top: 40px;
 }
 
-.form {
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+::selection{
+    background: #54555A;
+    color: #87B7FF;
+}
+
+.wrapper{
+    overflow: hidden;
+    max-width: 430px;
     background-color: #3D3F44;
+    padding: 28px;
     margin-left: 560px;
-    width: 400px;
-    padding: 10px;
+    border-radius: 15px;
+    margin-top: 10px;
+
+}
+
+.wrapper .form{
+    display: flex;
+    width: 220%;
+
+}
+
+.wrapper .title{
+    width:  400px;
+    font-size: 48pt;
+    font-weight: 600;
+    text-align: center;
+    font-family:Arial, Helvetica, sans-serif;
+    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+.wrapper .slide-controls{
+    position: relative;
+    display: flex;
+    height: 50px;
+    width: 100%;
+    overflow: hidden;
+    margin: 0px 0 10px 0;
+    justify-content: space-between;
+    border: 3px solid #87B7FF;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.slide-controls .slide{
+    height: 100%;
+    width: 100%;
+    color: #87B7FF;
+    font-size: 20pt;
+    font-weight: 700;
+    text-align: center;
+    line-height: 48px;
+    cursor: pointer;
+    z-index: 1;
+    transition: all 0.6s ease;
+}
+
+.slide-controls label.signup{
+    color: #87B7FF;
+}
+
+.slide-controls .slider-tab{
+    position: absolute;
+    height: 100%;
+    width: 50%;
+    left: 0;
+    z-index: 0;
+    border-radius: 15px;
+    background-color: #61636B;
+    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+input[type="radio"]{
+    display: none;
+}
+
+#signup:checked ~ .slider-tab{
+    left: 50%;
+}
+
+#signup:checked ~ label.signup{
+    color: #87B7FF;
+    cursor: default;
+    user-select: none;
+}
+
+#signup:checked ~ label.login{
+    color: #3E75C7;
+}
+
+#login:checked ~ label.signup{
+    color: #3E75C7;
+}
+
+#login:checked ~ label.login{
+    cursor: default;
+    user-select: none;
+}
+
+.wrapper .form-container{
+    width: 100%;
+    overflow: hidden;
+}
+
+.form-container .form-inner{
+    display: flex;
+    width: 200%;
+}
+
+.form-container .form-inner form{
+    width: 50%;
+    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
+}
+
+.form-inner form .field{
+    height: 50px;
+    width: 100%;
     margin-top: 20px;
 }
 
-.heading {
-    font-size: 48pt;
-    font-weight: 400;
-    font-family:Arial, Helvetica, sans-serif;
-    color: #F9F5ED;
-    margin-bottom: 20px;
+.form-inner form .field_file{
+    height: 50px;
+    width: 100px;
+    margin-top: 20px;
+    margin-bottom: -22px;
+    color: #f07f2e;
 }
 
-.input_fields {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+.form-inner form .field input{
+    height: 100%;
+    width: 100%;
+    outline: none;
+    padding-left: 15px;
+    border-radius: 15px;
+    border: 3px solid #5F626E;
+    background-color: #2B2C31;
+    border-bottom-width: 2px;
+    font-size: 17px;
 }
 
+.form-inner form .field input:focus{
+    border-color: #F8F3EE;
+    /* box-shadow: inset 0 0 3px #fb6aae; */
+}
 
+.form-inner form .field input::placeholder{
+    color: #B2B9CB;
+    transition: all 0.3s ease;
+}
+
+form .field input:focus::placeholder{
+    color: #F8F3EE;
+}
 
 .login_button {
     color: black;
     background-color: #f07f2e;
     border-radius: 30px;
-    width: 140px;
+    width: 240px;
     font-size: 24pt;
     padding: 5px;
+}
+
+.signup_button {
+    color: black;
+    background-color: #f07f2e;
+    border-radius: 30px;
+    width: 240px;
+    font-size: 24pt;
+    padding: 5px;
+    margin-top: 20px;
+    margin-left: 70px;
 }
