--- a/client/term4-group2-qna/src/components/screens/home.css
+++ b/client/term4-group2-qna/src/components/screens/home.css
@@ -19,24 +19,20 @@
 
   }
 
-  .Menu{
-    float: left;
-    background-color: #4B4D55;
-    width: 200px;
-    height: 600px;
-    margin-left: 50px;
-  }
-
-  .filter{
+ 
+  .filter {
     height: 50px;
     width: 647px;
-    background-color: #2B2C31;
+    background-color: #18191B;
     border: solid 1px #4B4D55;
     border-radius: 30px;
     display: flex;
-  align-items: center;
-  justify-content: center;
-  
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 50px;
   }
 
  
@@ -72,6 +68,15 @@
     color: #4B4D55; /* Change the text color on hover */
     border: solid 2px #FF8328;
   }
+
+  .ImageUpload{
+    background-image: url('file:///C:/Users/User/Downloads/uploading.png'); /* Replace with your image URL */
+    background-repeat: no-repeat;
+    width: 32px; /* Set the width and height of your button image */
+    height: 32px;
+    background-color: transparent;
+    margin-left: 20px;
+  }
   
   button {
     padding: 8px 16px;
@@ -86,20 +91,56 @@
     background-color: #0056b3;
   }
 
-  .comment-input button {
-    background-image: url('file:///C:/Users/User/Downloads/send%20(3).png'); /* Replace with your image URL */
+  .send {
+    background-image: url('file:///C:/Users/User/Downloads/send%20(7).png'); /* Replace with your image URL */
     background-repeat: no-repeat;
-    width: 24px; /* Set the width and height of your button image */
-    height: 24px;
+    width: 32px; /* Set the width and height of your button image */
+    height: 32px;
+    background-color: transparent;
+    margin-left: 20px;
   }
+
+  .send:hover {
+    background-image: url('file:///C:/Users/User/Downloads/send%20(6).png'); /* Replace with your image URL */
+    background-repeat: no-repeat;
+    width: 32px; /* Set the width and height of your button image */
+    height: 32px;
+    background-color: transparent;
+  }
+
+  .cards-container-wrapper {
+    display: flex;
+   float: left;
+    margin-top: 80px; /* Adjust the margin-top as needed */
+    height: 500px; /* You can adjust the height as needed */
+  overflow: auto;
+  }
+
+  /* Change the color of the scrollbar */
+.cards-container-wrapper::-webkit-scrollbar {
+    width: 10px; /* Adjust the width as needed */
+    background-color: #18191B; /* Change to the color you want */
+    
+  }
+  
+  /* Change the color of the scrollbar thumb */
+  .cards-container-wrapper::-webkit-scrollbar-thumb {
+    background-color: #4B4D55; /* Change to the color you want */
+    border-radius: 5px; /* Rounded corners for the scrollbar thumb */
+ 
+  }
+
   .cards-container {
-   
+    padding-top: 20px;
+    color: #F9F5ED;
     width: 647px;
     height: auto;
-    margin-top: 20px;
-    background: #2B2C31;
+    margin: 20px auto 0; /* Center horizontally and add top margin, 0 for top margin */
+    background: #212225;
     border-radius: 20px;
     border: solid 0.5px #4B4D55;
+    
+    margin-left: 44px;
   }
   
   .card {
@@ -128,15 +169,22 @@
     width: 24px; /* Set the width and height of your button image */
     height: 24px;
     margin-left: 35px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
 
-  .optmore{
-    background: url('file:///C:/Users/User/Downloads/option.png') no-repeat left center; /* Adjust the background-position as needed */
-    width: 24px; /* Set the width and height of your button image */
-    height: 24px;
+  .like-button:hover {
+     background-color: transparent;
+  }
+  
+  .dislike-button:hover {
+    background-color: transparent;
+  }
+  
+  .comment-button:hover {
+    background-color: transparent;
   }
 
+ 
  
   .card-buttons{
     border-top: 1px solid #4B4D55;
@@ -145,8 +193,44 @@
   }
 
   .card-content{
-    font-size: 22px;
-    margin-top: 40px;
+    font-size: 18px;
+    margin-top: 30px;
     text-align: left;
-    margin-left: 20px;
+    margin-left: 40px;
   }
+
+  /* filter */
+
+
+.navBarRightContainerHome {
+    display: flex;
+    width: fit-content;
+    align-items: center;
+    gap: 20px;
+    margin-left: 20px;
+    
+}
+
+.navBarRightItm-3-Container {
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    background: #26282C;
+    padding: 8px 10px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+/* Menu */
+
+.Menu{
+    float: left;
+
+    width: 300px;
+    height: 630px;
+    margin-left: 50px;
+    margin-right: 0px;
+    border-right: solid 1px  #4B4D55;
+  }
+
+  
