--- a/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
+++ b/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
@@ -6,6 +6,7 @@
     width: 100vw !important;
     justify-content: space-between;
     border-bottom: 1px solid #2A2A2E;
+    z-index: 9;
     position: sticky;
     /* top: 0; */
 }
