--- a/client/term4-group2-qna/src/components/screens/entitities/userProfile.css
+++ b/client/term4-group2-qna/src/components/screens/entitities/userProfile.css
@@ -2,20 +2,30 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 20px;
-    gap: 20px;
+    padding: 10px 5px;
+    gap: 10px;
 }
 
 .userProfileLeftWrap {}
 
 .userProfileMidWrap {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     width: 100%;
 }
 
 .userProfileHeaderContainer {
-    border: 1px solid #404147;
+    border: 1px solid #2A2A2E;
     border-radius: 10px;
     background: #18191B;
+}
+
+.userProfileHeaderBack {
+    padding: 20px;
+    width: fit-content;
+    color: white !important;
+    font-size: 24px;
 }
 
 .userProfileHeaderTopSection {}
@@ -28,7 +38,7 @@
 .userProfileHeaderBackgroundImg {
     width: 100%;
     height: 100px;
-    border-radius: 10px 10px 0px 0px;
+    /* border-radius: 10px 10px 0px 0px; */
     object-fit: cover;
 }
 
@@ -37,9 +47,9 @@
     width: 100%;
     margin-top: -100px;
     position: relative;
-    border-radius: 10px 10px 0px 0px;
-    border-bottom: 1px solid #404147;
-    background: linear-gradient(0deg, #18191B 11.61%, rgba(24, 25, 27, 0.00) 100%);
+    /* border-radius: 10px 10px 0px 0px; */
+    border-bottom: 1px solid #2A2A2E;
+    background: linear-gradient(0deg, #18191B 5%, rgba(24, 25, 27, 0.50) 100%);
 }
 
 .userProfileHeaderUserDetails {
@@ -47,8 +57,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 40px;
-    margin-top: -70px;
+    padding: 0px 20px;
+    margin-top: -80px;
     position: relative;
     z-index: 2px;
 }
@@ -67,11 +77,162 @@
     object-fit: cover;
 }
 
+.userProfileHeaderUserName {
+    margin-bottom: 20px;
+}
+
+.userProfileHeaderUserFollow {
+    margin-bottom: 15px;
+}
+
 .userProfileHeaderBottomSection {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: 20px 40px;
+    padding-top: 20px;
+    padding-left: 40px;
+    padding-right: 40px;
+
 }
 
+.userProfileHeaderBottomSectionItm {
+    padding-bottom: 20px;
+    border-bottom: 2px solid #18191B;
+    font-family: Kanit;
+    font-weight: 400;
+}
+
+.headerSectionItm-active {
+    border-bottom: 2px solid #FF8328;
+}
+
+.userProfileAboutContainer {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+.userProfileAboutRealibityContainer {
+    background: #18191B;
+    border: 1px solid #2A2A2E;
+    border-radius: 10px;
+    height: 100%;
+    min-height: 100px;
+    width: 100px;
+    padding: 0px 10px;
+}
+
+.userProfileAboutInfoContainer {
+    background: #18191B;
+    border: 1px solid #2A2A2E;
+    border-radius: 10px;
+    height: 100%;
+    min-height: 100px;
+    width: -webkit-fill-available;
+    padding: 0px 20px;
+}
+
+.userProfileAboutRealibityTop {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #3F4046;
+
+    font-size: 16px;
+    font-family: Kanit;
+    font-weight: 500;
+    color: #A3AABC;
+}
+
+.userProfileAboutInfoTop {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #3F4046;
+
+    font-size: 16px;
+    font-family: Kanit;
+    font-weight: 500;
+    color: #A3AABC;
+}
+
+.userProfileAboutRealibityScoreContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+    padding: 10px;
+}
+
+.userProfileAboutInfo {
+    padding: 20px 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.userProfileAboutInfoContainerItm {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    height: 100%;
+}
+
+.userProfileAboutInfoContainerItm {
+    /* padding: 10px 0px; */
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.userProfileAboutInfoIcon {
+    font-size: 20px;
+    color: #A3AABC;
+}
+
+.userProfileAboutInfoDetail {
+    font-size: 14px;
+    font-family: Pontano Sans;
+}
+
+.userProfileAboutRealibityScore {
+    font-size: 24px;
+    font-family: Pontano Sans;
+    font-weight: 800;
+}
+
+.userProfileAboutRealibityLabel {
+    font-size: 12px;
+}
+
+
+
 .userProfileRightWrap {}
+
+/* Responsiveness */
+
+@media only screen and (max-width: 500px) {
+
+    /* For Mobiles: */
+    .userProfileLeftWrap,
+    .userProfileRightWrap {
+        display: none;
+    }
+
+}
+
+@media only screen and (min-width: 700px) {
+
+    /* For tablets: */
+    .navBarRightContainerItmTxt {
+        display: block;
+    }
+
+}
