--- a/client/term4-group2-qna/src/css/colors.css
+++ b/client/term4-group2-qna/src/css/colors.css
@@ -1,13 +1,13 @@
 .theme-primary {
-    background: #101011;
+    background: #101011 !important;
 }
 
 .theme-secondary {
-    background: #18191B;
+    background: #18191B !important;
 }
 
 .theme-tertiary {
-    background: #26282C;
+    background: #26282C !important;
 }
 
 .color-danger {
