--- a/client/term4-group2-qna/src/css/colors.css
+++ b/client/term4-group2-qna/src/css/colors.css
@@ -13,3 +13,15 @@
 .color-danger {
     color: #f15d5d !important;
 }
+
+.color-text-primary {
+    color: #f6f7f9;
+}
+
+.color-text-secondary {
+    color: #67686c;
+}
+
+.color-component-secondary {
+    color: #67686c;
+}
