--- a/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
+++ b/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
@@ -8,7 +8,7 @@
     border-bottom: 1px solid #2A2A2E;
     z-index: 9;
     position: sticky;
-    /* top: 0; */
+    top: 0;
 }
 
 .container,
@@ -28,7 +28,7 @@
 .navBarLeftContainer {
     font-family: Kanit;
     font-weight: 600;
-    padding: 24px 0px;
+    padding: 10px 0px;
 }
 
 
