--- a/client/term4-group2-qna/src/components/elements/Cards/questionCard.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/questionCard.css
@@ -1,8 +1,9 @@
 .questionWrap {
-    border-radius: 10px 10px 0px 0px;
+    border-radius: 10px;
     padding: 20px;
     background: #18191B;
     font-family: Pontano Sans;
+    border: 1px solid #1d1d1e;
 }
 
 .questionTop {
@@ -64,7 +65,6 @@
 .questionMid {
     display: flex;
     flex-direction: column;
-    gap: 15px;
 }
 
 .questionMidText {
@@ -74,9 +74,12 @@
 }
 
 .questionMidCard {
-    height: 50px;
     overflow: hidden;
-    text-overflow: ellipsis;
+    transition: max-height 0.3s ease-in-out;
+}
+
+.questionMidCard.expnded {
+    max-height: none
 }
 
 .questionMidTextDescription.expanded {
@@ -90,11 +93,9 @@
     white-space: normal;
 }
 
-.expanded {
-    white-space: normal;
+.questionMidImgs {
+    margin-top: 10px;
 }
-
-.questionMidImgs {}
 
 .questionMidImgsCarousel {
     /* display: flex; */
@@ -109,6 +110,7 @@
     border: 1px solid #2A2A2E;
     border-radius: 10px;
     object-fit: cover;
+    user-select: none;
 }
 
 .ImgCarouselButtons {
@@ -118,8 +120,8 @@
     width: 100%;
     height: 100%;
     display: flex;
-    max-width: 580px;
-    max-height: 590px;
+    max-width: 560px;
+    max-height: 570px;
     justify-content: space-between;
     align-items: center;
 }
@@ -130,9 +132,35 @@
 
 .questionBtm {}
 
-.questionBtmLeftTags {}
+.questionBtmLeftTags {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+    gap: 5px;
+    margin-top: 15px;
+}
 
-.questionBtmRightInteraction {}
+.questionBtmInteractionsWrap {
+    display: flex;
+    justify-content: space-between;
+}
+
+.questionBtmRightInteraction {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 25px;
+}
+
+.questionBtmRightInteractionItem {
+    display: flex;
+    gap: 5px;
+}
+
+.questionBtmRightInteraction-metrics {}
 
 /* Responsiveness */
 
