--- a/client/term4-group2-qna/src/components/screens/entitities/userProfile.css
+++ b/client/term4-group2-qna/src/components/screens/entitities/userProfile.css
@@ -175,6 +175,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    font-weight: 800;
 }
 
 .userProfileAboutInfoContainerItm {
