--- a/client/term4-group2-qna/src/components/screens/responses.css
+++ b/client/term4-group2-qna/src/components/screens/responses.css
@@ -1,5 +1,6 @@
 body {
   background-color: #232428;
+  align-items: center;
 }
 
 .Comment {
@@ -59,22 +60,24 @@ body {
 } */
 
 .comment-vote {
-    float: right;
-    padding-right: 14px;
+  float: right;
+  padding-right: 14px;
 }
 
 .vote {
-    display: inline;
-    width: 82px;
-    height: 24px;
+  display: flex;
+  width: 160px;
+  height: 24px;
+  margin-top: 20px;
 }
 
-.up-vote{
-    float: left;
+.up-vote {
+  float: left;
 }
 
-.down-vote{
-    float: right;
+.down-vote {
+  float: right;
+  margin-right: 20px;
 }
 
 .vote-count {
@@ -84,4 +87,80 @@ body {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-left: 13px;
+  margin-right: 13px;
+  margin-top: 4px;
+}
+
+/* .comment-vote-divide{
+  margin-right: 20px;
+} */
+
+.comment-btn {
+  margin-left: 20px;
+}
+
+.comment-count {
+  color: #b7b4af;
+  font-family: Uni Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  padding-left: 12px;
+}
+
+.filter-add-comment{
+  display: flex;
+}
+
+.comment-filter {
+  width: 149px;
+  height: 28px;
+  flex-shrink: 0;
+  border-radius: 17px;
+  background: #313338;
+  padding-top: 12px;
+}
+
+.dropdown-filter {
+  margin-top: 15px;
+  color: #fff;
+  font-family: Uni Sans;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.select-box{
+  background-color: #313338;
+  border: transparent;
+  color: #fff;
+  font-family: Uni Sans;
+  font-style: normal;
+  font-weight: 600;
+  margin-left: 5px;
+}
+
+.add-comment{
+  width: auto;
+  height: 28px;
+  border-radius: 17px;
+  background-color: #313338;
+  float: right;
+  padding-top: 12px;
+  font-size: 14px;
+  color: #fff;
+  font-family: Uni Sans;
+  font-style: normal;
+  font-weight: 600;
+  margin-left: 5px;
+  display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.add-btn{
+  margin-left: 20px;
 }
