System UI re-structure  v1

--- a/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
+++ b/client/term4-group2-qna/src/components/elements/Navbar/navbar.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0 20px;
     background: #18191B;
-    width: 100vw !important;
+    width: 100% !important;
     justify-content: space-between;
     border-bottom: 1px solid #2A2A2E;
     z-index: 9;
@@ -40,6 +40,7 @@
     padding: 6px 0px;
     border-radius: 12px;
     cursor: pointer;
+    font-family: Kanit;
 }
 
 .navBarLeftLogoContainer {
