--- a/client/term4-group2-qna/src/css/components.css
+++ b/client/term4-group2-qna/src/css/components.css
@@ -2,7 +2,7 @@
     font-size: 16px;
     font-size: 16px;
     font-family: Kanit;
-    font-weight: 400;
+    font-weight: 500;
     background: #FF8328;
     color: #101011;
     border: 2px solid #FF8328;
@@ -10,6 +10,7 @@
     padding: 4px 12px;
     padding: 4px 12px;
     height: fit-content;
+    transition: .17s all linear;
 }
 
 .button-primary:hover {
