--- a/client/term4-group2-qna/src/components/elements/Menus/sideMenus.css
+++ b/client/term4-group2-qna/src/components/elements/Menus/sideMenus.css
@@ -1,5 +1,5 @@
 .sideBarContainer {
-    background: #26282C;
+    background: #18191B;
     border: 1px solid #42424C;
     padding: 20px;
     height: 93vh;
