Navbar and Sidebars Functional

--- a/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
@@ -2,14 +2,17 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    padding: 20px;
-    background: #26282C;
+    padding: 15px;
+    background: #18191B;
     margin-left: calc(-92px + -20px);
     margin-bottom: calc(-120px + -20px);
-    gap: 20px;
+    gap: 10px;
     z-index: 11;
-    border-radius: 10px;
+    border-radius: 5px;
     outline: 1px solid #313132;
+    box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
+    -webkit-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
+    -moz-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
 }
 
 /* .optionsOverlay {
@@ -25,9 +28,26 @@
 
 .cardOption {
     display: flex;
-    gap: 10px;
+    gap: 8px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.danger {
+    color: rgb(255, 43, 93) !important;
+}
+
+.action {
+    color: #6095ff !important;
+}
+
+.optionIcon {
+    color: #848079;
+    font-size: 20px;
 }
 
 .optionTitle {
     font-family: Kanit;
+    font-weight: 400 !important;
+    font-size: 14px;
 }
