Found Images + Tweaking topics

--- a/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/questionCard.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/questionCard.css
@@ -19,6 +19,20 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    cursor: pointer;
+    user-select: none;
+}
+
+.questionTopLeft:hover {
+
+    /* text-decoration: underline; */
+    .questionTopLeftImgEmptyWrap {
+        border: 1px solid #FF8328;
+    }
+
+    .questionTopLeftDetailsName {
+        color: #FF8328;
+    }
 }
 
 .questionTopLeftDetailsWrap {
