--- a/client/term4-group2-qna/src/components/screens/Home/home.css
+++ b/client/term4-group2-qna/src/components/screens/Home/home.css
@@ -5,3 +5,9 @@
     padding: 10px 5px;
     gap: 10px;
 }
+
+.homeMidQuestions {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
