--- a/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
@@ -2,17 +2,52 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    padding: 15px;
+    padding: 20px;
     background: #18191B;
-    margin-left: calc(-92px + -20px);
-    margin-bottom: calc(-120px + -20px);
-    gap: 10px;
+    margin-left: -2.4rem;
+    margin-bottom: -8.2rem;
+    gap: 20px;
     z-index: 11;
-    border-radius: 5px;
+    border-radius: 7.5px;
     outline: 1px solid #313132;
     box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
     -webkit-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
     -moz-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
+}
+
+.cardOption {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+    cursor: pointer;
+}
+
+.dangerIcon {
+    color: #947277 !important;
+}
+
+.danger {
+    color: #ff799b !important;
+}
+
+.actionIcon {
+    color: #728092 !important;
+}
+
+.action {
+    color: #80b5ff !important;
+}
+
+.optionIcon {
+    color: #8c8b89;
+    font-size: 18x !important;
+}
+
+.optionTitle {
+    font-family: Pontano Sans;
+    font-weight: 500 !important;
+    font-size: 16px;
 }
 
 /* .optionsOverlay {
@@ -25,29 +60,3 @@
     width: 100%;
     height: 100%;
 } */
-
-.cardOption {
-    display: flex;
-    gap: 8px;
-    align-items: center;
-    cursor: pointer;
-}
-
-.danger {
-    color: rgb(255, 43, 93) !important;
-}
-
-.action {
-    color: #6095ff !important;
-}
-
-.optionIcon {
-    color: #848079;
-    font-size: 20px;
-}
-
-.optionTitle {
-    font-family: Kanit;
-    font-weight: 400 !important;
-    font-size: 16px;
-}
