All Filter Settings functional

--- a/client/term4-group2-qna/src/components/screens/Home/home.css
+++ b/client/term4-group2-qna/src/components/screens/Home/home.css
@@ -6,6 +6,13 @@
     gap: 10px;
 }
 
+.homeMidWrap {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    /* width: 100%; */
+}
+
 .homeMidQuestions {
     display: flex;
     flex-direction: column;
