--- a/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/questionCard.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/questionCard.css
@@ -42,6 +42,12 @@
 
 .questionTopLeftImgWrap {}
 
+.questionTopLeftImgImage {
+    height: 36px;
+    width: 36px;
+    border-radius: 100px;
+}
+
 .questionTopLeftImgEmptyWrap {
     background: #18191B;
     height: 36px;
