--- a/client/term4-group2-qna/src/App.css
+++ b/client/term4-group2-qna/src/App.css
@@ -8,7 +8,11 @@ html {
   width: 100%;
 }
 
-/* Material Icons Size Configuration */
+/* Material Icons Size  Configuration */
+.material-icons.md-16 {
+  font-size: 16px !important;
+}
+
 .material-icons.md-18 {
   font-size: 18px !important;
 }
