--- a/client/term4-group2-qna/src/css/components.css
+++ b/client/term4-group2-qna/src/css/components.css
@@ -7,7 +7,7 @@
     color: #101011;
     border: 2px solid #FF8328;
     border-radius: 300px;
-    padding: 4px 14px;
+    padding: 3px 10px;
     height: fit-content;
     transition: .17s all linear;
 }
@@ -26,7 +26,7 @@
     color: #87B7FF;
     border: 2px solid #87B7FF;
     border-radius: 300px;
-    padding: 4px 14px;
+    padding: 3px 10px;
     height: fit-content;
     transition: .17s all linear;
 }
@@ -134,6 +134,39 @@
 
 .font-body {
     font-family: Pontano Sans;
+}
+
+.cardProfileImage {
+    height: 36px;
+    width: 36px;
+    border-radius: 100px;
+}
+
+.text,
+textarea {
+    background: #18191B;
+    border: 0.75px solid #252527;
+    border-radius: 10px;
+    padding: 8px 12px;
+    height: 45px;
+    color: #F9F3ED;
+    width: 100%;
+    max-width: 600px;
+    font-family: Pontano Sans;
+    font-weight: 600;
+    outline: none;
+}
+
+textarea {
+    min-height: 150px !important;
+}
+
+.text:focus,
+textarea:focus {
+    background: none;
+    border: 1px solid #FF8328;
+    -webkit-box-shadow: 0px 0px 1px 4px rgba(255, 131, 40, 0.13);
+    box-shadow: 0px 0px 1px 4px rgba(255, 131, 40, 0.13);
 }
 
 /* Swiper Component */
