--- a/client/term4-group2-qna/src/components/screens/Entitities/User/Profile/userProfile.css
+++ b/client/term4-group2-qna/src/components/screens/Entitities/User/Profile/userProfile.css
@@ -17,19 +17,26 @@
 }
 
 .userProfileHeaderContainer {
-    border: 1px solid #2A2A2E;
+    /* border: 1px solid #2A2A2E; */
     border-radius: 10px;
-    background: #18191B;
+    /* background: #18191B; */
+    position: sticky;
+    top: 34px;
+    z-index: 1;
 }
 
 .userProfileHeaderBack {
-    padding: 20px;
+    padding-bottom: 20px;
     width: fit-content;
     color: white !important;
     font-size: 24px;
+    cursor: pointer;
 }
 
-.userProfileHeaderTopSection {}
+.userProfileHeaderTopSection {
+    background: #101011;
+    border-radius: 10px 10px 0px 0px;
+}
 
 .userProfileHeaderBackground {
     width: 100%;
@@ -39,6 +46,7 @@
 .userProfileHeaderBackgroundImg {
     width: 100%;
     height: 100px;
+    border-radius: 10px;
     /* border-radius: 10px 10px 0px 0px; */
     object-fit: cover;
 }
@@ -48,6 +56,7 @@
     width: 100%;
     margin-top: -100px;
     position: relative;
+    border-radius: 10px;
     /* border-radius: 10px 10px 0px 0px; */
     border-bottom: 1px solid #2A2A2E;
     background: linear-gradient(0deg, #18191B 5%, rgba(24, 25, 27, 0.50) 100%);
@@ -73,7 +82,7 @@
 .userProfileHeaderUserProfileImg {
     width: 90px;
     height: 90px;
-    border: 3px solid #18191b;
+    border: 3px solid #101011;
     border-radius: 120px;
     object-fit: cover;
 }
@@ -93,7 +102,10 @@
     padding-top: 20px;
     padding-left: 40px;
     padding-right: 40px;
-
+    border-radius: 10px;
+    /* background: khaki; */
+    background: #18191b;
+    border-bottom: 2px solid #2a2a2e;
 }
 
 .userProfileHeaderBottomSectionItm {
