--- a/client/term4-group2-qna/src/components/screens/Home/home.css
+++ b/client/term4-group2-qna/src/components/screens/Home/home.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 10px 5px;
+    padding: 10px 0px;
     gap: 10px;
 }
 
@@ -11,6 +11,10 @@
     flex-direction: column;
     gap: 5px;
     /* width: 100%; */
+}
+
+.home-hr {
+    margin: 10px 0px;
 }
 
 .homeMidQuestions {
