--- a/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
+++ b/client/term4-group2-qna/src/components/elements/Cards/QuestionCard/CardOptions/cardOptions.css
@@ -1,5 +1,5 @@
 .cardOptionsWrap {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     position: absolute;
     padding: 20px;
@@ -8,6 +8,27 @@
     margin-bottom: -8.2rem;
     gap: 20px;
     z-index: 11;
+    border-radius: 7.5px;
+    outline: 1px solid #313132;
+    box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
+    -webkit-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
+    -moz-box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045); */
+    width: 100%;
+    max-width: 560px;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.cardOptionsContainer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    padding: 20px 80px 20px 20px;
+    background: #18191B;
+    width: fit-content;
+    gap: 20px;
+    z-index: 1;
     border-radius: 7.5px;
     outline: 1px solid #313132;
     box-shadow: 0 4px 31px rgba(237, 238, 242, 0.045);
@@ -50,13 +71,14 @@
     font-size: 16px;
 }
 
-/* .optionsOverlay {
+.optionsOverlay {
     position: fixed;
-    z-index: 10;
+    width: 93vw;
+    height: 99vh;
+    /* background: aliceblue; */
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-} */
+    /* right: 0; */
+    /* bottom: 0; */
+    z-index: 1;
+}
