--- a/client/term4-group2-qna/src/components/screens/Entitities/User/Profile/userProfile.css
+++ b/client/term4-group2-qna/src/components/screens/Entitities/User/Profile/userProfile.css
@@ -22,7 +22,7 @@
     /* background: #18191B; */
     position: sticky;
     top: 34px;
-    z-index: 1;
+    z-index: 3;
 }
 
 .userProfileHeaderBack {
@@ -46,7 +46,7 @@
 .userProfileHeaderBackgroundImg {
     width: 100%;
     height: 100px;
-    border-radius: 10px;
+    border-radius: 10px 10px 0px 0px;
     /* border-radius: 10px 10px 0px 0px; */
     object-fit: cover;
 }
@@ -56,8 +56,8 @@
     width: 100%;
     margin-top: -100px;
     position: relative;
-    border-radius: 10px;
-    /* border-radius: 10px 10px 0px 0px; */
+    /* border-radius: 10px; */
+    border-radius: 10px 10px 0px 0px;
     border-bottom: 1px solid #2A2A2E;
     background: linear-gradient(0deg, #18191B 5%, rgba(24, 25, 27, 0.50) 100%);
 }
@@ -80,26 +80,22 @@
 }
 
 .userProfileHeaderUserProfileImg {
-    width: 90px;
-    height: 90px;
-    border: 3px solid #101011;
+    width: 60px;
+    height: 60px;
+    border: 1px solid #303032;
     border-radius: 120px;
     object-fit: cover;
 }
 
-.userProfileHeaderUserName {
-    margin-bottom: 20px;
-}
+.userProfileHeaderUserName {}
 
-.userProfileHeaderUserFollow {
-    margin-bottom: 15px;
-}
+.userProfileHeaderUserFollow {}
 
 .userProfileHeaderBottomSection {
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding-top: 20px;
+    padding-top: 40px;
     padding-left: 40px;
     padding-right: 40px;
     border-radius: 10px;
@@ -110,7 +106,7 @@
 
 .userProfileHeaderBottomSectionItm {
     padding-bottom: 20px;
-    border-bottom: 2px solid #18191B;
+    border-bottom: 2px solid #18191b;
     font-family: Kanit;
     font-weight: 400;
 }
